-inserito stile base box prodotto -inserite immagini

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <div class="sconto">
 
           </div>
+          <img src="img/ipad.png" alt="img-ipad">
 
         </div>
 
@@ -27,14 +28,16 @@
           <div class="sconto">
 
           </div>
+          <img src="img/iphone.png" alt="img-ipad">
 
-        </div>>
+        </div>
 
         <div class="prodotto">
           <!-- box sconto -->
-          <div class="sconto">
-
+          <div class="sconto_">
+            
           </div>
+          <img src="img/beats.png" alt="img-ipad">
 
         </div>
 
