- aggiunto box sconto - aggiunta seconda riga prodotti

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <!-- box singolo prodotto -->
         <div class="prodotto">
           <!-- box sconto -->
-          <div class="sconto">
-
+          <div class="sconto vecchio">
+            -30%
           </div>
           <img src="img/ipad.png" alt="img-ipad">
 
@@ -25,8 +25,8 @@
 
         <div class="prodotto">
           <!-- box sconto -->
-          <div class="sconto">
-
+          <div class="sconto nuovo">
+            -5%
           </div>
           <img src="img/iphone.png" alt="img-ipad">
 
@@ -34,8 +34,41 @@
 
         <div class="prodotto">
           <!-- box sconto -->
-          <div class="sconto_">
-            
+          <div class="sconto vecchio">
+            -30%
+          </div>
+          <img src="img/beats.png" alt="img-ipad">
+
+        </div>
+
+      </div>
+
+      <!-- 2° riga prodotti -->
+      <div class="row">
+
+        <!-- box singolo prodotto -->
+        <div class="prodotto">
+          <!-- box sconto -->
+          <div class="sconto vecchio">
+            -30%
+          </div>
+          <img src="img/ipad.png" alt="img-ipad">
+
+        </div>
+
+        <div class="prodotto">
+          <!-- box sconto -->
+          <div class="sconto nuovo">
+            -5%
+          </div>
+          <img src="img/iphone.png" alt="img-ipad">
+
+        </div>
+
+        <div class="prodotto">
+          <!-- box sconto -->
+          <div class="sconto vecchio">
+            -30%
           </div>
           <img src="img/beats.png" alt="img-ipad">
 
