- aggiunto cuoricino per funzione preferiti - cambiate immagini

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             -30%
           </div>
           <img src="img/ipad.png" alt="img-ipad">
-
+          <div class="preferiti">
+            &hearts;
+          </div>
         </div>
 
         <div class="prodotto">
@@ -29,7 +31,9 @@
             -5%
           </div>
           <img src="img/iphone.png" alt="img-ipad">
-
+          <div class="preferiti">
+            &hearts;
+          </div>
         </div>
 
         <div class="prodotto">
@@ -38,7 +42,9 @@
             -30%
           </div>
           <img src="img/beats.png" alt="img-ipad">
-
+          <div class="preferiti">
+            &hearts;
+          </div>
         </div>
 
       </div>
@@ -53,7 +59,9 @@
             -30%
           </div>
           <img src="img/ipad.png" alt="img-ipad">
-
+          <div class="preferiti">
+            &hearts;
+          </div>
         </div>
 
         <div class="prodotto">
@@ -62,7 +70,9 @@
             -5%
           </div>
           <img src="img/iphone.png" alt="img-ipad">
-
+          <div class="preferiti">
+            &hearts;
+          </div>
         </div>
 
         <div class="prodotto">
@@ -71,7 +81,9 @@
             -30%
           </div>
           <img src="img/beats.png" alt="img-ipad">
-
+          <div class="preferiti">
+            &hearts;
+          </div>
         </div>
 
       </div>
